Add console logs to index.html for debugging
Added console logs for debugging and confirmation of script loading.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
   <link rel="stylesheet" href="style.css" />
   <meta name="theme-color" content="#0b1020" />
 </head>
+  <script>
+    
+  console.log("index.html carregou ✅");
+</script>
+<script src="https://cdn.jsdelivr.net/npm/phaser@3.80.1/dist/phaser.min.js"></script>
+<script>
+  console.log("Phaser:", typeof Phaser);
+</script>
+<script src="game.js"></script>
+<script>
+  console.log("game.js foi pedido ✅ (se não aparecer erro acima)");
+</script>
+
 <body>
   <header class="topbar">
     <div class="brand">NEON ARENA</div>
@@ -34,3 +47,4 @@
   <script src="game.js"></script>
 </body>
 </html>
+
